syntax = "proto3";
package web;

option go_package = "web/v1/user;web";

// import "third_party/tagger/tagger.proto";

message UserInfoRequest{}

message UserInfoResponse {
  int64 user_id = 1;
  string nick_name = 2;
  string email = 3;
  string avatar = 4;
  int32 status = 5;
}